--- a/usability/questionaire.tex
+++ b/usability/questionaire.tex
@@ -28,10 +28,14 @@ Try to make the following observations
 \section{Questions}\label{sec:quest}
 \begin{description}
     \item[1] How easy was it to find information? \newline\newline
+    Hard \quad\quad 0\quad\quad\quad 1\quad\quad\quad 2 \quad\quad\quad 3 \quad\quad\quad 4 \quad\quad\quad 5\quad\quad Easy
+    \newline
     \item[2] What do you think the sliders on the main page do? \newline\newline\newline
-    \item[3] Was the layout on the search results page easy to understand? \newline\newline\newline
-    \item[4] Was the layout on the table page informative? \newline\newline\newline
-    \item[5] Did you find the university main page attractive? \newline\newline\newline
+    \item[3] How easy was the layout on the search results page understand? \newline\newline
+Hard \quad\quad 0\quad\quad\quad 1\quad\quad\quad 2 \quad\quad\quad 3 \quad\quad\quad 4 \quad\quad\quad 5\quad\quad Easy\newline
+    \item[4] How informative was the table page? \newline \newline  
+Not informative \quad\quad 0\quad\quad\quad 1\quad\quad\quad 2 \quad\quad\quad 3 \quad\quad\quad 4 \quad\quad\quad 5\quad\quad Informative\newline
+    \item[5] How attractive did you find the university main page? \newline\newline Not attractive \quad\quad 0\quad\quad\quad 1\quad\quad\quad 2 \quad\quad\quad 3 \quad\quad\quad 4 \quad\quad\quad 5\quad\quad Attractive\newline
     \item[6] If you could improve the site in any way, what would you do? \newline\newline\newline
     \item[7] Do you have any other comments?
 
