--- a/usability/questionaire.tex
+++ b/usability/questionaire.tex
@@ -31,7 +31,7 @@ Try to make the following observations
     Hard \quad\quad 0\quad\quad\quad 1\quad\quad\quad 2 \quad\quad\quad 3 \quad\quad\quad 4 \quad\quad\quad 5\quad\quad Easy
     \newline
     \item[2] What do you think the sliders on the main page do? \newline\newline\newline
-    \item[3] How easy was the layout on the search results page understand? \newline\newline
+    \item[3] How easy was the layout on the search results page to understand? \newline\newline
 Hard \quad\quad 0\quad\quad\quad 1\quad\quad\quad 2 \quad\quad\quad 3 \quad\quad\quad 4 \quad\quad\quad 5\quad\quad Easy\newline
     \item[4] How informative was the table page? \newline \newline  
 Not informative \quad\quad 0\quad\quad\quad 1\quad\quad\quad 2 \quad\quad\quad 3 \quad\quad\quad 4 \quad\quad\quad 5\quad\quad Informative\newline
