--- a/doc/usability/questionaire.tex
+++ b/doc/usability/questionaire.tex
@@ -3,7 +3,7 @@
 \usepackage{geometry} % Required to change the page size to A4
 \geometry{a4paper} % Set the page size to be A4 as opposed to the
 \begin{document}
-Ask testers to complete either Scenario A or Scenario B. Afterwards, ask them them questions in Section \ref{sec:quest}.
+Ask testers to complete either Scenario A or Scenario B. Afterwards, ask them them questions in Section~\ref{sec:quest}.
 \section{Scenario A}
 Ask the user to find information on a Computer Science course.
 
@@ -15,13 +15,34 @@ Try to make the following observations
     \item Did they ever ask for help?
 \end{itemize}
 \section{Scenario B}
-Ask the user to casually browse the website. Tell them to click on what interests them.
+You have suddenly realised that you don't like your degree. You have decided to follow your true passion, Architecture. Find the Architecture courses with the highest student satisfaction rate.
 
 Try to make the following observations
 \begin{itemize}
     \item Do they seem fustrated at any time?
     \item Did they seem confused at any time?
     \item How long did it take them to ask for help?
+\end{itemize}
+\section{Scenario C}
+You're a busy parent looking to find courses for your child. You think they want to study something creative, but you are worried they won't be able to earn a living if they do. You decide to find out which creative courses have high employment rates and salaries.
+
+Try to make the following observations
+\begin{itemize}
+    \item How long did it take them?
+    \item Do they seem fustrated at any time?
+    \item Did they seem confused at any time?
+    \item Did they ever ask for help?
+\end{itemize}
+
+\section{Scenario D}
+Try using the search bar to find one of the courses you were looking at earlier.
+
+Try to make the following observations
+\begin{itemize}
+    \item How long did it take them?
+    \item Do they seem fustrated at any time?
+    \item Did they seem confused at any time?
+    \item Did they ever ask for help?
 \end{itemize}
 \newpage
 
